// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a closed Section correctly 1`] = `
<div>
  <div>
    <button
      onClick={[Function]}
    >
      <div>
        The Section Title is always visible
      </div>
      <span>
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="6 9 12 15 18 9"
          />
        </svg>
      </span>
    </button>
    <div />
  </div>
</div>
`;

exports[`it renders an open Section correctly 1`] = `
<div>
  <div>
    <button
      onClick={[Function]}
    >
      <div>
        The Section Title is always visible
      </div>
      <span>
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="18 15 12 9 6 15"
          />
        </svg>
      </span>
    </button>
    <div>
      This section is open. You should see this content.
    </div>
  </div>
</div>
`;
